--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,11 @@
     </properties>
     <dependencies>
 
+        <!--        jwt-->
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-api</artifactId>
-            <version>0.11.5</version>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.0.0</version>
         </dependency>
 
         <dependency>
