--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,7 +34,7 @@ mybatis-plus:
 
 my:
   server: # 上传到服务器需要改这个
-    name: https://localhost
+    name: https://sdadgz.cn
     uploadPath: '/usr/local/springboot/static/' # 文件下载到哪里，记得屁股加个杠
 
   file-config:
