忘了自己写的page怎么用了

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
     </properties>
     <dependencies>
 
+        <!--    aop     -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <!--   压缩图片     -->
         <dependency>
             <groupId>net.coobird</groupId>
