--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://sdadgz.cn:3307/website
+    url: jdbc:mysql://sdadgz.cn:3307/website?useSSL=true&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     type: com.alibaba.druid.pool.DruidDataSource
