上传脚本修改，数据库存储的访问用url修改

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,7 +54,7 @@ my:
   file-config:
     uploadPath: '${my.server.uploadPath}'
     staticPath: '/static/' # 访问前缀，不是物理地址
-    downloadPath: '${my.server.name}:${server.port}${my.file-config.staticPath}' # 存url到数据库时用的他
+    downloadPath: '${my.server.name}/springboot/8000${my.file-config.staticPath}' # 存url到数据库时用的他
 
   unification-config:
     response-lists: 'lists'
