--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
   port: 8000
-  ssl:
-    key-store: classpath:sdadgz.cn.jks
-    key-store-type: JKS
+#  ssl:
+#    key-store: classpath:sdadgz.cn.jks
+#    key-store-type: JKS
   servlet:
     encoding:
       force: true # 静态资源乱码
@@ -54,7 +54,7 @@ my:
   file-config:
     uploadPath: '${my.server.uploadPath}'
     staticPath: '/static/' # 访问前缀，不是物理地址
-    downloadPath: '${my.server.name}/springboot/8000${my.file-config.staticPath}' # 存url到数据库时用的他
+    downloadPath: '${my.file-config.staticPath}' # 存url到数据库时用的他
 
   unification-config:
     response-lists: 'lists'
