上传文件改uuid作为名字，根治特殊字符

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
     </properties>
     <dependencies>
 
+        <!--    糊涂    -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.15</version>
+        </dependency>
+
         <!--    redis    -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
